# cuslater

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  XYreduce-log.txt  alphatimelog.txt  cmake_install.cmake  contraction.cu  cuslater.cuh  cuslater.h  grids.jl  hadamard  interface_cuda.jl  lior_sum.jl  mylog.txt  nz_grids.jl  print_grids.jl  readme.md  run_julia.sh  run_loop.sh  simple  slurm-job.sh  stocalculator.cu  stocalculator.h  test.jl
examples/: simple.cu  test-evalInner.cu  test-grids.cu  test-hadamar.cu  test-hadamard.cu  test-legendre.cu  test-simpson.cu  test.cpp  test.cu
grid_files/: l_170.grid  l_230.grid  l_434.grid  r_112.grid  r_119.grid  r_125.grid  r_131.grid  r_137.grid  r_143.grid  r_148.grid  r_153.grid  r_158.grid  r_74.grid  r_79.grid  x1_legendre_1d_100.grid  x1_legendre_1d_125.grid  x1_legendre_1d_150.grid  x1_legendre_1d_175.grid  x1_legendre_1d_225.grid  x1_legendre_1d_25.grid  x1_legendre_1d_250.grid  x1_legendre_1d_325.grid  x1_legendre_1d_350.grid  x1_legendre_1d_375.grid  x1_legendre_1d_475.grid  x1_legendre_1d_625.grid  x1_legendre_1d_75.grid  x1_simpson_1d_1200.grid  x1_simpson_1d_501.grid  x1_simpson_1d_9.grid
grid_files/lag32/: r_300_47.grid  r_38_200.grid  r_43.grid  r_50_350.grid  r_54.grid  r_57.grid  r_60_500.grid
grid_files/lag64/: r_63.grid  r_69.grid  r_84.grid  r_93.grid
grid_files/leb32/: l_38.grid  l_434.grid  l_590.grid
grid_files/leb64/: l_770.grid
grid_files/leg32/: x1_legendre_1d_150.grid  x1_legendre_1d_225.grid  x1_legendre_1d_250.grid  x1_legendre_1d_275.grid  x1_legendre_1d_350.grid  x1_legendre_1d_400.grid  x1_legendre_1d_425.grid  x1_legendre_1d_75.grid
grid_files/leg64/: x1_legendre_1d_125.grid  x1_legendre_1d_200.grid  x1_legendre_1d_225.grid  x1_legendre_1d_325.grid  x1_legendre_1d_350.grid  x1_legendre_1d_375.grid  x1_legendre_1d_400.grid  x1_legendre_1d_475.grid  x1_legendre_1d_500.grid
grid_files_adap/lag32/: r_100_27.grid  r_150_33.grid  r_50_19.grid  r_550_63.grid  r_600_66.grid
grid_files_adap/lag64/: r_100_39.grid  r_150_48.grid  r_200_56.grid  r_500_89.grid  r_50_27.grid  r_600_97.grid
grid_files_adap/leb32/: l_110.grid  l_1202.grid  l_14.grid  l_146.grid  l_170.grid  l_194.grid  l_230.grid  l_26.grid  l_266.grid  l_302.grid  l_350.grid  l_50.grid  l_6.grid  l_74.grid  l_770.grid  l_86.grid  l_974.grid
grid_files_adap/leb64/: l_26.grid  l_50.grid  l_6.grid  l_974.grid
grid_files_adap/leg32/: x1_legendre_1d_100.grid  x1_legendre_1d_125.grid  x1_legendre_1d_175.grid  x1_legendre_1d_200.grid  x1_legendre_1d_25.grid  x1_legendre_1d_300.grid  x1_legendre_1d_325.grid  x1_legendre_1d_375.grid  x1_legendre_1d_450.grid  x1_legendre_1d_475.grid  x1_legendre_1d_50.grid  x1_legendre_1d_500.grid
grid_files_adap/leg64/: x1_legendre_1d_175.grid  x1_legendre_1d_250.grid  x1_legendre_1d_275.grid  x1_legendre_1d_300.grid  x1_legendre_1d_425.grid  x1_legendre_1d_450.grid  x1_legendre_1d_525.grid  x1_legendre_1d_550.grid  x1_legendre_1d_575.grid
grid_files_old/: l_110.grid  l_1202.grid  l_14.grid  l_146.grid  l_194.grid  l_266.grid  l_302.grid  l_350.grid  l_38.grid  l_590.grid  l_74.grid  l_86.grid  r_10.grid  r_105.grid  r_16.grid  r_2.grid  x1_legendre_1d_200.grid  x1_legendre_1d_21.grid  x1_legendre_1d_275.grid  x1_legendre_1d_300.grid  x1_legendre_1d_400.grid  x1_legendre_1d_425.grid  x1_legendre_1d_450.grid  x1_legendre_1d_50.grid  x1_legendre_1d_500.grid  x1_legendre_1d_600.grid  x1_legendre_1d_650.grid  x1_legendre_1d_675.grid  x1_legendre_1d_700.grid  x1_legendre_1d_725.grid  x1_legendre_1d_750.grid  x1_simpson_1d_21.grid  x1_simpson_1d_900.grid  x1_simpson_1d_999.grid
include/: cuslater.cuh  evalInnerIntegral.h  evalInnerIntegralStreams.h  evalIntegral.h  gputensors.h  grids.h  hadamard.h  sto.h  tensors.cuh  tensors.h  utilities.h
profiling/: gputrace.txt  nvproflog.txt
shell_scripts/: nltests.sh  simple_time_tests.sh  testruns.sh
src/: .evalIntegral.cu.swp  evalInnerIntegral.cu  evalInnerIntegralStreams.cu  evalIntegral.cu  gputensors.cu  grids.cu  grids.jl  hadamard.cu  print_grids.jl  stovalues.cu  svalues.cu  tensors.cu  utilities.cu
tests/: testruns.sh
